Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,9 +5,10 @@
 
 trigger:
 - master
+- test
 
 pool:
-  vmImage: 'windows-latest'
+  vmImage: 'VS2017-Win2016'
 
 variables:
   solution: '**/*.sln'
@@ -15,7 +16,7 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- task: NuGetToolInstaller@1
+- task: NuGetToolInstaller@0
 
 - task: NuGetCommand@2
   inputs:
@@ -32,31 +33,11 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
-steps:
-- task: DownloadBuildArtifacts@0
-  displayName: 'Download Build Artifacts'
+- task: PublishBuildArtifacts@1
   inputs:
-    artifactName: drop
-    itemPattern: '*.exe'
-
-steps:
-- task: ArchiveFiles@2
-  displayName: 'Archive $(Agent.ReleaseDirectory)\NLipin.Cl\drop\UI\bin\Release\'
-  inputs:
-    rootFolderOrFile: '$(Agent.ReleaseDirectory)\NLipin.Cl\drop\UI\bin\Release\'
-    archiveFile: '$(Agent.ReleaseDirectory)\NLipin.Cl\drop\$(Build.BuildId).zip'
-    verbose: true
-
-steps:
-- task: GitHubRelease@0
-  displayName: 'GitHub release (create)'
-  inputs:
-    gitHubConnection: NLipin
-    repositoryName: NLipin/UI
-    tagSource: manual
-    tag: '$(Release.ReleaseName)'
-    title: '$(Release.ReleaseName)'
-    releaseNotesSource: input
-    releaseNotes: '$(Release.ReleaseName)'
-    assets: |
-     $(Agent.ReleaseDirectory)\NLipin.UI\drop\*.zip
+    pathtoPublish: '$(Build.SourcesDirectory)' 
+    artifactName: 'drop' 
+    publishLocation: 'Container' # Options: container, filePath
+    targetPath: # Required when publishLocation == FilePath
+  #parallel: false # Optional
+  #parallelCount: # Optional
